@@ -46,7 +46,7 @@ return array(
 	'tslib_content_abstract' => PATH_tslib . 'content/class.tslib_content_abstract.php',
 	'tslib_content_case' => PATH_tslib . 'content/class.tslib_content_case.php',
 	'tslib_content_cleargif' => PATH_tslib . 'content/class.tslib_content_cleargif.php',
-	'tslib_content_contentobjectarray_internal' => PATH_tslib . 'content/class.tslib_content_contentobjectarray_internal.php',
+	'tslib_content_contentobjectarrayinternal' => PATH_tslib . 'content/class.tslib_content_contentobjectarrayinternal.php',
 	'tslib_content_contentobjectarray' => PATH_tslib . 'content/class.tslib_content_contentobjectarray.php',
 	'tslib_content_columns' => PATH_tslib . 'content/class.tslib_content_columns.php',
 	'tslib_content_content' => PATH_tslib . 'content/class.tslib_content_content.php',
@@ -64,7 +64,7 @@ return array(
 	'tslib_content_media' => PATH_tslib . 'content/class.tslib_content_media.php',
 	'tslib_content_multimedia' => PATH_tslib . 'content/class.tslib_content_multimedia.php',
 	'tslib_content_offsettable' => PATH_tslib . 'content/class.tslib_content_offsettable.php',
-	'tslib_content_phpscript_internal' => PATH_tslib . 'content/class.tslib_content_phpscript_internal.php',
+	'tslib_content_phpscriptinternal' => PATH_tslib . 'content/class.tslib_content_phpscriptinternal.php',
 	'tslib_content_phpscript' => PATH_tslib . 'content/class.tslib_content_phpscript.php',
 	'tslib_content_quicktimeobject' => PATH_tslib . 'content/class.tslib_content_quicktimeobject.php',
 	'tslib_content_records' => PATH_tslib . 'content/class.tslib_content_records.php',
@@ -74,7 +74,7 @@ return array(
 	'tslib_content_shockwaveflashobject' => PATH_tslib . 'content/class.tslib_content_shockwaveflashobject.php',
 	'tslib_content_template' => PATH_tslib . 'content/class.tslib_content_template.php',
 	'tslib_content_text' => PATH_tslib . 'content/class.tslib_content_text.php',
-	'tslib_content_user_internal' => PATH_tslib . 'content/class.tslib_content_user_internal.php',
+	'tslib_content_userinternal' => PATH_tslib . 'content/class.tslib_content_userinternal.php',
 	'tslib_content_user' => PATH_tslib . 'content/class.tslib_content_user.php',
 	'tslib_content_editpanel' => PATH_tslib . 'content/class.tslib_content_editpanel.php',
 );
