@@ -815,9 +815,9 @@ class tslib_cObj {
 			'CLEARGIF' => 'ClearGif',
 			'COBJ_ARRAY' => 'ContentObjectArray',
 			'COA' => 'ContentObjectArray',
-			'COA_INT' => 'ContentObjectArray_Internal',
+			'COA_INT' => 'ContentObjectArrayInternal',
 			'USER' => 'User',
-			'USER_INT' => 'User_Internal',
+			'USER_INT' => 'UserInternal',
 			'FILE' => 'File',
 			'IMAGE' => 'Image',
 			'IMG_RESOURCE' => 'ImageResource',
@@ -835,7 +835,7 @@ class tslib_cObj {
 			'FORM' => 'Form',
 			'SEARCHRESULT' => 'SearchResult',
 			'PHP_SCRIPT' => 'PhpScript',
-			'PHP_SCRIPT_INT' => 'PhpScript_Internal',
+			'PHP_SCRIPT_INT' => 'PhpScriptInternal',
 			'TEMPLATE' => 'Template',
 			'FLUIDTEMPLATE' => 'FluidTemplate',
 			'MULTIMEDIA' => 'Multimedia',
