@@ -4,6 +4,7 @@
 
 2010-11-26  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16569: Violation of naming conventions in t3lib_content_
 	* Fixed bug #16487: modulemenu.js breaks livesearch "Show all" when already in list module (Thanks to Andreas Kiessling)
 
 2010-11-26  Christian Kuhn  <lolli@schwarzbu.ch>
